update author name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["composer", "authorization"],
     "authors": [
         {
-            "name": "Alex Medvedev",
+            "name": "fduch",
             "email": "alex.medwedew@gmail.com"
         }
     ],
